[gd_scene load_steps=11 format=3 uid="uid://jga6pbb5xpug"]

[ext_resource type="PackedScene" uid="uid://ds848t2x4cxyt" path="res://characters/IcySkin_inherited.tscn" id="1"]
[ext_resource type="Script" path="res://characters/PlayerEntity.gd" id="2"]
[ext_resource type="Resource" uid="uid://cvgmkxk86tr45" path="res://ui/game_data_store.tres" id="2_gbwfc"]
[ext_resource type="PackedScene" uid="uid://d3yswfl2m7nue" path="res://characters/CharacterControllers/OneStickController.tscn" id="2_njm8p"]
[ext_resource type="PackedScene" uid="uid://d1rmoxdu5yefv" path="res://characters/CharacterControllers/TwoStickController.tscn" id="3_k2os6"]
[ext_resource type="PackedScene" uid="uid://drvgaalhd5v8s" path="res://characters/CharacterControllers/TwoStickControllerAuto.tscn" id="5_n2q7r"]
[ext_resource type="PackedScene" uid="uid://c5l20701ck6co" path="res://characters/health_manager.tscn" id="6_7wv34"]
[ext_resource type="Script" path="res://characters/PositionResetter.gd" id="14"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.492627
height = 1.97047

[sub_resource type="SphereShape3D" id="SphereShape3D_q0x46"]

[node name="PlayerEntity" type="CharacterBody3D"]
collision_mask = 27
floor_max_angle = 0.872665
script = ExtResource("2")
controller_schemes = Array[PackedScene]([ExtResource("2_njm8p"), ExtResource("3_k2os6"), ExtResource("5_n2q7r")])
game_data = ExtResource("2_gbwfc")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.987748, 0)
shape = SubResource("1")

[node name="HealthManager" parent="." instance=ExtResource("6_7wv34")]

[node name="PositionResetter" type="Node" parent="."]
script = ExtResource("14")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0.298836, -0.640857, 0, 0.906308, 0.422618, 0.707107, 0.298836, -0.640857, 0, 0, 0)

[node name="ThirdPersonCamera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35)
projection = 1
current = true
fov = 30.0
size = 16.0

[node name="IcySkin" parent="." instance=ExtResource("1")]

[node name="InteractionArea" type="Area3D" parent="IcySkin"]
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="IcySkin/InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00531, 0.798733)
shape = SubResource("SphereShape3D_q0x46")

[node name="OneStickController" parent="." instance=ExtResource("2_njm8p")]

[connection signal="damage" from="HealthManager" to="." method="on_hit"]
[connection signal="health_depleted" from="HealthManager" to="." method="on_death"]
